--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,12 @@ Primary use:
 .container {max-width: 1200px;}
 
 
-
+.domains a, a:hover, a:focus, a:visited {
+  color: #fff;
+}
+.domains a:hover {
+text-decoration: underline;
+}
 /*//////////////////////////////////////////////////////////////////
 [ Form ]*/
 
